--- a/css/main.css
+++ b/css/main.css
@@ -1840,7 +1840,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #d03eff;
+  background: #4242b0;
 }
 .links-of-blogroll {
   font-size: 13px;
