--- a/css/main.css
+++ b/css/main.css
@@ -1891,7 +1891,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #a3c41c;
+  background: #4e0fff;
 }
 .links-of-blogroll {
   font-size: 13px;
