add about & new post

--- a/css/main.css
+++ b/css/main.css
@@ -185,7 +185,7 @@ th {
 }
 body {
   position: relative;
-  font-family: 'Noto Sans SC Regular', "PingFang SC", "Microsoft YaHei", sans-serif;
+  font-family: 'Noto Sans Mono SC', "PingFang SC", "Microsoft YaHei", sans-serif;
   font-size: 14px;
   line-height: 2;
   color: #555;
@@ -216,7 +216,7 @@ h6 {
   padding: 0;
   font-weight: bold;
   line-height: 1.5;
-  font-family: 'Noto Sans SC Regular', 'Noto Sans SC Regular', "PingFang SC", "Microsoft YaHei", sans-serif;
+  font-family: 'Noto Sans Mono SC', 'Noto Sans Mono SC', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 h1,
 h2,
@@ -513,7 +513,7 @@ pre,
 }
 pre,
 code {
-  font-family: 'Noto Sans SC Regular', consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
+  font-family: 'Noto Sans Mono SC', consolas, Menlo, "PingFang SC", "Microsoft YaHei", monospace;
 }
 code {
   overflow-wrap: break-word;
@@ -1146,7 +1146,7 @@ pre .javascript .function {
   line-height: 36px;
   font-size: 20px;
   font-weight: normal;
-  font-family: 'Noto Sans SC Regular', 'Noto Sans SC Regular', "PingFang SC", "Microsoft YaHei", sans-serif;
+  font-family: 'Noto Sans Mono SC', 'Noto Sans Mono SC', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 .site-subtitle {
   margin-top: 10px;
@@ -1238,7 +1238,7 @@ pre .javascript .function {
 .post-body {
   overflow-wrap: break-word;
   word-wrap: break-word;
-  font-family: 'Noto Sans SC Regular', 'Noto Sans SC Regular', "PingFang SC", "Microsoft YaHei", sans-serif;
+  font-family: 'Noto Sans Mono SC', 'Noto Sans Mono SC', "PingFang SC", "Microsoft YaHei", sans-serif;
 }
 .post-body .exturl .fa {
   font-size: 14px;
@@ -1521,7 +1521,7 @@ pre .javascript .function {
 .posts-expand .post-meta {
   margin: 3px 0 60px 0;
   color: #999;
-  font-family: 'Noto Sans SC Regular', 'Noto Sans SC Regular', "PingFang SC", "Microsoft YaHei", sans-serif;
+  font-family: 'Noto Sans Mono SC', 'Noto Sans Mono SC', "PingFang SC", "Microsoft YaHei", sans-serif;
   font-size: 12px;
   text-align: center;
 }
@@ -1738,6 +1738,16 @@ pre .javascript .function {
 .rtl.post-title {
   font-family: UKIJ Ekran;
 }
+.reading-progress-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #37c6c0;
+}
 .sidebar {
   position: fixed;
   right: 0;
@@ -1907,7 +1917,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #0bff04;
+  background: #ff9671;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -2303,6 +2313,14 @@ pre .javascript .function {
 .site-pv .busuanzi-value,
 .page-pv .busuanzi-value {
   margin: 0 5px;
+}
+.gt-header a,
+.gt-comments a,
+.gt-popup a {
+  border-bottom: none;
+}
+.gt-container .gt-popup .gt-action.is--active:before {
+  top: 0.7em;
 }
 .page-archive .archive-page-counter {
   position: relative;
