--- a/css/main.css
+++ b/css/main.css
@@ -1917,7 +1917,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #217c33;
+  background: #14858e;
 }
 .links-of-blogroll {
   font-size: 13px;
